--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath "com.android.tools.build:gradle:${gradle.androidPluginVersion}"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +20,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            // Local maven repository
+            url = "/Users/reber/Github/AppRespository/SNAPSHOT"
+        }
     }
 }
 
