--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,25 @@
-gradle.ext.androidPluginVersion = '3.5.2'
+gradle.ext.androidPluginVersion = '3.6.1'
 
+gradle.ext.applicationId = 'com.base.library.app'
 gradle.ext.compileSdkVersion = 29
 gradle.ext.buildToolsVersion = "29.0.2"
 gradle.ext.minSdkVersion = 17
 gradle.ext.targetSdkVersion = 29
+gradle.ext.versionCode = 1
+gradle.ext.versionName = '1.0'
 
 gradle.ext.androidxJunit = "4.12"
 gradle.ext.androidxTestJunit = "1.1.1"
 gradle.ext.androidxTestEspresso = "3.2.0"
 
+// maven url
+gradle.ext.maveUrlSnapshot = "/Users/reber/Github/AppRespository/SNAPSHOT"
+gradle.ext.maveUrlRelease = "/Users/reber/Github/AppRespository/Release"
+
 gradle.ext.androidxAppcompat = "1.1.0"
 gradle.ext.androidxConstraintlayout = "1.1.3"
 gradle.ext.androidxRecyclerView = "1.1.0"
 
-rootProject.name='AppLibrary'
+rootProject.name = 'AppLibrary'
 include ':app'
 include ':Font'
