--- a/settings.gradle
+++ b/settings.gradle
@@ -13,8 +13,9 @@ gradle.ext.androidxTestJunit = "1.1.1"
 gradle.ext.androidxTestEspresso = "3.2.0"
 
 // maven url
-gradle.ext.maveUrlSnapshot = "/Users/reber/Github/AppRespository/SNAPSHOT"
+gradle.ext.maveUrlSnapshot = "../AppRespository/SNAPSHOT"
 gradle.ext.maveUrlRelease = "/Users/reber/Github/AppRespository/Release"
+gradle.ext.maveGroupId = "com.base.library"
 
 gradle.ext.androidxAppcompat = "1.1.0"
 gradle.ext.androidxConstraintlayout = "1.1.3"
@@ -23,3 +24,4 @@ gradle.ext.androidxRecyclerView = "1.1.0"
 rootProject.name = 'AppLibrary'
 include ':app'
 include ':Font'
+include ':ValuesRes'
