--- a/ValuesRes/build.gradle
+++ b/ValuesRes/build.gradle
@@ -1,35 +1,22 @@
 plugins {
-    id 'java'
     id 'maven-publish'
 }
+apply from: "../AppConfig/library.gradle"
 
-dependencies {
-    implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'androidx.test.ext:junit:1.1.1'
-    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-}
-
-task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
-    archiveClassifier = "sources"
-}
-
-project.version = '1.0-SNAPSHOT'
+project.version = '1.1-SNAPSHOT'
 
 Boolean isRelease() {
     !project.version.endsWith('-SNAPSHOT')
 }
 
 publishing {
+    // 就是配置maven-publishing插件的输出物。
     publications {
         maven(MavenPublication) {
+            artifact "build/outputs/aar/${project.name}-${isRelease() ? "release" : "debug"}.aar"
             groupId "${gradle.maveGroupId}"
             artifactId project.name
             version project.version
-
-            from components.java
-            artifact sourceJar
         }
     }
 
