dispaly font for testing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".font.AppFontActivity" />
+
         <activity android:name=".database.activity.AppOrderActivity" />
     </application>
 
