--- a/settings.gradle
+++ b/settings.gradle
@@ -19,10 +19,12 @@ gradle.ext.maveGroupId = "com.base.library"
 
 gradle.ext.androidxAppcompat = "1.1.0"
 gradle.ext.androidxConstraintlayout = "1.1.3"
-gradle.ext.androidxRecyclerView = "1.1.0"
+gradle.ext.androidxRecyclerView = "1.2.0-alpha03"
+gradle.ext.androidxViewPager2 = "1.1.0-alpha01"
 
 rootProject.name = 'AppLibrary'
 include ':app'
 include ':Font'
-include ':ValuesRes'
+include ':Values'
 include ':Database'
+include ':Widget'
