--- a/Values/build.gradle
+++ b/Values/build.gradle
@@ -1,4 +1,4 @@
-apply from: "../AppConfig/library.gradle"
+apply from: "../config/library.gradle"
 
 dependencies {
     implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
