--- a/Widget/build.gradle
+++ b/Widget/build.gradle
@@ -1,4 +1,4 @@
-apply from: "../AppConfig/library.gradle"
+apply from: "../config/library.gradle"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
