--- a/Database/build.gradle
+++ b/Database/build.gradle
@@ -8,6 +8,19 @@ android {
         }
     }
 
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
+    }
+    // 用于测试
+    // json文件文件会导出在工程目录下的schemas文件夹下面。里面会有各个版本数据库的信息
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
 }
 
 dependencies {
