--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':Database')
     implementation project(path: ':Font')
     implementation project(path: ':Widget')
     implementation project(path: ':Values')
+    implementation project(path: ':NetWork')
+    implementation project(path: ':Common')
+    implementation project(path: ':Utils')
+    implementation project(path: ':Video')
+    implementation project(path: ':AppConfiguration')
+    implementation project(path: ':AppPush')
+    implementation project(path: ':Database')
     implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${gradle.androidxConstraintlayout}"
 
