--- a/Font/build.gradle
+++ b/Font/build.gradle
@@ -1,37 +1,55 @@
 plugins {
     id 'maven-publish'
 }
+
 apply from: "../config/library.gradle"
 
 dependencies {
     implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
+
     testImplementation "junit:junit:${gradle.androidxJunit}"
     androidTestImplementation "androidx.test.ext:junit:${gradle.androidxTestJunit}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${gradle.androidxTestEspresso}"
 }
 
-project.version = '1.0-Release'
+def isRelease = false
+def mavenVersion = '1.0'
+def destinationOutputDir = 'build/outputs/aar'
+project.version = "${mavenVersion}-${isRelease ? 'Release' : 'SNAPSHOT'}"
 
-Boolean isRelease() {
-    project.version.endsWith('-Release')
+task sourcesJar(type: Jar) {
+    archiveClassifier = 'sources'
+    destinationDirectory = file(destinationOutputDir)
+    from android.sourceSets.main.java.srcDirs
 }
 
 publishing {
-    // 就是配置maven-publishing插件的输出物。
     publications {
         maven(MavenPublication) {
-            artifact "build/outputs/aar/${project.name}-${isRelease() ? "release" : "debug"}.aar"
             groupId "${gradle.maveGroupId}"
-            artifactId project.name
-            version project.version
+            artifactId "${project.name}"
+            version "${project.version}"
+
+            // build/outputs/aar/Font-debug.aar
+            artifact "${destinationOutputDir}/${project.name}-${isRelease ? 'release' : 'debug'}.aar"
+            artifact sourcesJar
+
+            // The publication doesn't know about our dependencies,
+            // so we have to manually add them to the pom
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                configurations.implementation.allDependencies.each {
+                    if (it.group != null && it.name != null && "unspecified" != it.name && it.version != null) {
+                        addPomDependencies(it, dependenciesNode)
+                    }
+                }
+            }
         }
     }
-
     repositories {
         maven {
-            // 配置仓库地址
-            // Configure warehouse address
-            if (isRelease()) {
+            // 配置仓库地址 Configure warehouse address
+            if (isRelease) {
                 url = "${gradle.maveUrlRelease}"
 //                credentials {
 //                    username = System.getenv('OSS_USER')
