--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle.androidPluginVersion}"
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +23,18 @@ allprojects {
             url = "/Users/reber/Github/AppRespository/Release"
         }
     }
+}
+
+/**
+ * 手动添加dependencies下的依赖大pom文件中
+ */
+def addPomDependencies(it, dependenciesNode) {
+    def dependencyNode = dependenciesNode.appendNode('dependency')
+
+    dependencyNode.appendNode('groupId', it.group == getRootProject().name ? "${gradle.maveGroupId}" : it.group)
+    dependencyNode.appendNode('artifactId', it.name)
+    dependencyNode.appendNode('version', it.version)
+    dependencyNode.appendNode('scope', 'implementation')
 }
 
 task clean(type: Delete) {
