--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,10 @@ gradle.ext.androidxConstraintlayout = "1.1.3"
 gradle.ext.androidxRecyclerView = "1.2.0-alpha03"
 gradle.ext.androidxViewPager2 = "1.1.0-alpha01"
 
-gradle.ext.androidxRoom= "2.2.5"
+gradle.ext.androidxRoom = "2.2.5"
+
+// google library
+gradle.ext.googleMaterial = "1.1.0"
 
 rootProject.name = 'AppLibrary'
 include ':app'
