add page loading UI for activity or fragment

--- a/Widget/build.gradle
+++ b/Widget/build.gradle
@@ -4,7 +4,7 @@ plugins {
 apply from: "../config/library.gradle"
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':Utils')
 
     implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
     implementation "androidx.recyclerview:recyclerview:${gradle.androidxRecyclerView}"
