change values name to valuesRes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,13 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':Font')
     implementation project(path: ':Widget')
     implementation project(path: ':Values')
