--- a/settings.gradle
+++ b/settings.gradle
@@ -9,9 +9,10 @@ gradle.ext.versionCode = 1
 gradle.ext.versionName = '1.0'
 
 // maven url
-gradle.ext.maveUrlSnapshot = "../AppRespository/SNAPSHOT"
-gradle.ext.maveUrlRelease = "../AppRespository/Release"
+gradle.ext.maveUrlSnapshot = System.getProperty("user.dir") + "/AppRespository/SNAPSHOT"
+gradle.ext.maveUrlRelease = System.getProperty("user.home") + "/AppRespository/Release"
 gradle.ext.maveGroupId = "com.base.library"
+gradle.ext.mavePublishingRelease = false
 
 // androidx library
 gradle.ext.androidxJunit = "4.12"
