--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,7 @@ allprojects {
         mavenLocal() // 先获取本地的依赖
         maven {
             // Local maven repository
-            url = System.getProperty("user.dir") + "AppRespository/SNAPSHOT"
-            url = System.getProperty("user.dir") + "/AppRespository/Release"
+            url = System.getProperty("user.home") + "/AppRespository/Release"
         }
     }
 }
