--- a/Database/build.gradle
+++ b/Database/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 def isPublishingRelease = gradle.mavePublishingRelease
 def mavenVersion = '1.0'
 def destinationOutputDir = 'build/outputs/aar'
-project.version = "${mavenVersion}-${isPublishingRelease ? 'Release' : 'SNAPSHOT'}"
+project.version = "${mavenVersion}-${isPublishingRelease ? 'release' : 'SNAPSHOT'}"
 
 task sourcesJar(type: Jar) {
     archiveClassifier = 'sources'
@@ -45,7 +45,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId "${gradle.maveGroupId}"
-            artifactId "${project.name}"
+            artifactId "${project.name.toLowerCase()}"
             version "${project.version}"
 
             // build/outputs/aar/Font-debug.aar
