--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ gradle.ext.versionName = '1.0'
 
 // maven url
 gradle.ext.maveUrlSnapshot = System.getProperty("user.dir") + "/AppRespository/SNAPSHOT"
-gradle.ext.maveUrlRelease = System.getProperty("user.home") + "/AppRespository/Release"
+gradle.ext.maveUrlRelease = System.getProperty("user.home") + "/AppRespository/RELEASE"
 gradle.ext.maveGroupId = "com.base.library"
 gradle.ext.mavePublishingRelease = false
 
