--- a/settings.gradle
+++ b/settings.gradle
@@ -35,10 +35,10 @@ include ':Font'
 include ':Values'
 include ':Database'
 include ':Widget'
-include ':NetWork'
+include ':Network'
 include ':Utils'
 include ':Video'
-include ':AppPush'
+include ':push'
 include ':Common'
-include ':AppConfiguration'
-include ':AppRouter'
+include ':Configuration'
+include ':Arouter'
