--- a/settings.gradle
+++ b/settings.gradle
@@ -38,7 +38,7 @@ include ':Widget'
 include ':Network'
 include ':Utils'
 include ':Video'
-include ':push'
+include ':Push'
 include ':Common'
 include ':Configuration'
 include ':Arouter'
