--- a/config/maven_publishing.gradle
+++ b/config/maven_publishing.gradle
@@ -5,18 +5,6 @@ task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-/**
- * 手动添加dependencies下的依赖到pom文件中
- */
-def addPomDependencies(it, dependenciesNode) {
-    def dependencyNode = dependenciesNode.appendNode('dependency')
-
-    dependencyNode.appendNode('groupId', it.group == getRootProject().name ? "${gradle.maveGroupId}" : it.group)
-    dependencyNode.appendNode('artifactId', it.group == getRootProject().name ? it.name.toLowerCase() : it.name)
-    dependencyNode.appendNode('version', it.version)
-    dependencyNode.appendNode('scope', 'implementation')
-}
-
 def isPublishingRelease = gradle.mavePublishingRelease
 def destinationOutputDir = 'build/outputs/aar'
 publishing {
@@ -35,12 +23,12 @@ publishing {
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
                 configurations.implementation.allDependencies.each {
-                    if (it.group != null &&
-                            !it.group.contains("androidx") &&
-                            it.name != null &&
-                            "unspecified" != it.name &&
-                            getRootProject().name != it.name &&
-                            it.version != null) {
+                    if (it.group != null
+                            && !it.group.startsWith("androidx")
+                            && it.group != getRootProject().name
+                            && it.name != null
+                            && it.name != "unspecified"
+                            && it.version != null) {
                         addPomDependencies(it, dependenciesNode)
                     }
                 }
